Changed so container hold objects, page and form are special containers

--- a/example2/index.html
+++ b/example2/index.html
@@ -3,7 +3,12 @@
 		<title>Hello</title>
         <link rel="stylesheet" href="../klevlar.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	</head>
+    </head>
+    <style>
+        .red {
+            color: red;
+        }
+    </style>
 	<body onload="onLoaded()">
         <div id="klevlar" class="row">
         </div>
