Changed FormControls structure for input and select.

--- a/example3/index.html
+++ b/example3/index.html
@@ -14,8 +14,21 @@
         .blue {
             color: blue;
         }
+        .menu {
+            color: blue;
+            margin-right: 20px;
+        }
+        .menu:hover {
+            color: red;
+        }
+        .nav {
+            width: 100%;
+            background-color: lightgray;
+        }
     </style>
-	<body onload="onLoaded()">
+    <body onload="onLoaded()">
+        <div id="menu" class="row">
+        </div>
         <div id="klevlar" class="row">
         </div>
 	</body>
